WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60494
WebKit2 uses GDI text instead of CG text when FontSmoothing preference is set to kWKFontSmoothingLevelNoSubpixelAntiAliasing in a .plist on disk
https://bugs.webkit.org/show_bug.cgi?id=60494
Summary
WebKit2 uses GDI text instead of CG text when FontSmoothing preference is set...
Adam Roben (:aroben)
Reported
2011-05-09 12:15:21 PDT
WebKit2 uses GDI text instead of CG text when FontSmoothing preference is set to kWKFontSmoothingLevelNoSubpixelAntiAliasing in a .plist on disk
Attachments
Patch
(1.73 KB, patch)
2011-05-09 12:15 PDT
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-05-09 12:15:48 PDT
Created
attachment 92824
[details]
Patch
Adam Roben (:aroben)
Comment 2
2011-05-09 12:21:20 PDT
Committed
r86077
: <
http://trac.webkit.org/changeset/86077
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug