Always set the font rendering mode based on preference values

WebPage::platformInitialize and WebPage::platformPreferencesDidChange were fighting over the
font rendering mode. The platformInitialize code predates preference-based font rendering
mode support, and is now redundant and incorrect.

Fixes <http://webkit.org/b/60494> WebKit2 uses GDI text instead of CG text when
FontSmoothing preference is set to kWKFontSmoothingLevelNoSubpixelAntiAliasing in a .plist
on disk

Reviewed by Sam Weinig.

* WebProcess/WebPage/win/WebPageWin.cpp:
(WebKit::WebPage::platformInitialize): Removed code to set the font rendering mode.
platformPreferencesDidChange will take care of this for us.

git-svn-id: svn://svn.chromium.org/blink/trunk@86077 bbb929c8-8fbe-4397-9dbb-9b2b20218538