third_party/WebKit/Source/WebKit2/WebProcess/WebPage/win/WebPageWin.cpp
@@ -64,7 +64,6 @@ namespace WebKit {
 
 void WebPage::platformInitialize()
 {
-    m_page->settings()->setFontRenderingMode(AlternateRenderingMode);
 }
 
 void WebPage::platformPreferencesDidChange(const WebPreferencesStore& store)
